# aifaker

./: .gitignore  README.md  pyproject.toml
src/aifaker/: __init__.py  modules.py
